@@ -1,5 +1,10 @@
 2007-05-07  Thomas Wood  <thos@gnome.org>
 
+	* appearance-style.c: (conv_to_widget_cb), (prepare_combo): Remove some
+	unnecessary code.
+
+2007-05-07  Thomas Wood  <thos@gnome.org>
+
 	* appearance-style.c: (prepare_combo): Fix icon theme combo box
 
 2007-05-07  Thomas Wood  <thos@gnome.org>
